// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textAreaField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_hwn4511"
        >
          <textarea
            aria-invalid="false"
            class="uv_hwn4513 uv_hwn4518"
            id="_r_0_"
            name="test"
            rows="3"
            style="--uv_hwn4510: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
          />
          <div
            class="uv_hwn4512 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should render correctly generated 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          class="uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j"
        >
          <label
            class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            for="_r_e_"
          >
            Test
          </label>
          <span
            class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8n uv_1yhcak81a uv_1yhcak82m"
          >
            *
          </span>
        </div>
        <div
          class="uv_hwn4511"
        >
          <textarea
            aria-invalid="false"
            class="uv_hwn4513 uv_hwn4518"
            id="_r_e_"
            name="test"
            rows="3"
            style="--uv_hwn4510: calc(0.5rem + 1.5rem + 0px + 0px + 0.25rem); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
          >
            This is an example
          </textarea>
          <div
            class="uv_hwn4512 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
          >
            <button
              aria-label="clear value"
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mh uv_1x0t66mj uv_1x0t66m19"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should submit with onSubmitEnter prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_6_"
        >
          Test
        </label>
        <div
          class="uv_hwn4511"
        >
          <textarea
            aria-invalid="false"
            class="uv_hwn4513 uv_hwn4518"
            id="_r_6_"
            name="test"
            rows="3"
            style="--uv_hwn4510: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
          >
            This is an example
          </textarea>
          <div
            class="uv_hwn4512 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
          />
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
